fixed silly z-index bug

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -28,7 +28,12 @@
     color: $white-light;
     margin: 0;
   }
+  h1 {
+    font-size: 50px;
+    font-weight: 300;
+  }
   h3 {
+    font-size: 25px;
     font-weight: 100;
   }
 }
