--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,7 +1,7 @@
 @import '../shared/common-styles.scss';
 
 #contact-link {
-  background-color: white;
+  background-color: $white-light;
   padding-bottom: 40px;
   text-align: left;
 }
