--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   min-height: 650px;
   margin-top: -64px;
-  z-index: -1;
+  position: relative;
   @media (max-width: 500px) {
     margin-top: -40px;
   }
