--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -9,6 +9,10 @@
   margin-bottom: 30px;
 }
 
+.title {
+  margin-bottom: 30px;
+}
+
 .portfolio {
   min-height: 100%;
 }
